@@ -1,13 +1,12 @@
 package com.mjc.groupware.shared.controller;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -17,7 +16,9 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import com.mjc.groupware.member.entity.Member;
 import com.mjc.groupware.member.security.MemberDetails;
 import com.mjc.groupware.shared.dto.SharedFolderDto;
+import com.mjc.groupware.shared.entity.SharedFile;
 import com.mjc.groupware.shared.entity.SharedFolder;
+import com.mjc.groupware.shared.repository.FileRepository;
 import com.mjc.groupware.shared.repository.FolderRepository;
 import com.mjc.groupware.shared.service.SharedFolderService;
 
@@ -29,32 +30,50 @@ public class SharedFolderController {
 	
 	private final FolderRepository folderRepository;
 	private final SharedFolderService sharedFolderService;
+	private final FileRepository fileRepository;
 	
 	@GetMapping("/shared/main/tree")
 	@ResponseBody
 	public List<Map<String, Object>> getFolderTree(Authentication auth) {
-		MemberDetails memberDetails = (MemberDetails) auth.getPrincipal(); // (1) 로그인한 사용자 정보 (MemberDetails)
+	    MemberDetails memberDetails = (MemberDetails) auth.getPrincipal(); // (1) 로그인한 사용자 정보 (MemberDetails)
 	    Member member = memberDetails.getMember(); // 진짜 Member 꺼내기
-	    
-	    Long deptNo = (member.getDept() != null)? member.getDept().getDeptNo() : null;
-	    
+
+	    Long deptNo = (member.getDept() != null) ? member.getDept().getDeptNo() : null;
+
 	    List<SharedFolder> folders;
-	    
-	    if(deptNo == null) {
-	    	//  부서 없는 사용자 (예: 관리자) ➔ 공유 폴더만 가져오기
-	    	folders = folderRepository.findSharedFolders();
-	    }else {
-	    	  // 일반 사용자 ➔ 내 개인 + 내 부서 + 공유 폴더
-	    	folders = folderRepository.findByAccessControl(member.getMemberNo(), deptNo);
+	    if (deptNo == null) {
+	        folders = folderRepository.findSharedFolders();
+	    } else {
+	        folders = folderRepository.findByAccessControl(member.getMemberNo(), deptNo);
 	    }
 
-	    return folders.stream().map(folder -> {  // 가져온 폴더 목록을 jsTree용 형태로 변환.
+	    List<Map<String, Object>> result = new ArrayList<>();
+
+	    for (SharedFolder folder : folders) {
+	        // ✅ 폴더 노드 추가 (기존 코드 그대로)
 	        Map<String, Object> node = new HashMap<>();
-	        node.put("id", folder.getFolderNo()); // jsTree는 id, parent, text 3개 필요
+	        node.put("id", folder.getFolderNo());
 	        node.put("parent", folder.getParentFolder() == null ? "#" : folder.getParentFolder().getFolderNo());
 	        node.put("text", folder.getFolderName());
-	        return node;
-	    }).collect(Collectors.toList());
+	        node.put("icon", "jstree-folder");
+	        result.add(node);
+
+	        // ✅ 파일 노드 추가 (여기만 추가된 부분)
+	        List<SharedFile> files = fileRepository.findByFolderFolderNo(folder.getFolderNo()).stream()
+	            .filter(file -> "N".equals(file.getFileStatus()))
+	            .toList();
+
+	        for (SharedFile file : files) {
+	            Map<String, Object> fileNode = new HashMap<>();
+	            fileNode.put("id", "file-" + file.getFileNo());
+	            fileNode.put("parent", folder.getFolderNo());
+	            fileNode.put("text", file.getFileName());
+	            fileNode.put("icon", "jstree-file");
+	            result.add(fileNode);
+	        }
+	    }
+
+	    return result;
 	}
 	
 	// 최상위,하위 폴더 생성.
@@ -72,6 +91,27 @@ public class SharedFolderController {
 	    SharedFolder folder = folderRepository.findById(folderId)
 	        .orElseThrow(() -> new RuntimeException("상위 폴더를 찾을 수 없습니다."));
 	    return Map.of("folderType", folder.getFolderType());
+	}
+	
+	// 폴더 이동
+	@PostMapping("/shared/folder/move")
+	@ResponseBody
+	public Map<String, String> moveFolder(@RequestBody Map<String, Long> payload) {
+	    Long folderId = payload.get("folderId");
+	    Long newParentId = payload.get("newParentId");
+	    sharedFolderService.moveFolder(folderId, newParentId);
+	    return Map.of("message", "폴더 위치가 변경되었습니다.");
+	}
+	
+	@PostMapping("/shared/folder/delete")
+	@ResponseBody
+	public Map<String, Object> deleteFolder(@RequestBody Map<String, Long> payload, Authentication auth) {
+	    Long folderId = payload.get("id");
+	    Member member = ((MemberDetails) auth.getPrincipal()).getMember();
+
+	    sharedFolderService.softDelete(folderId, member.getMemberNo());
+
+	    return Map.of("message", "폴더가 삭제되었습니다.");
 	}
 	
 	
